Fixed closing tag on columndivzoom, set tune alignment step indicator to resize

--- a/public/css/leftcol.css
+++ b/public/css/leftcol.css
@@ -203,3 +203,7 @@
   top: 51vh;
   left: 6.7vw;
 }
+
+#tunealignmentstepvalue{
+  font-size: .85vw;
+}
